--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissor Game</title>
-    <script src="practice.js"></script>
+    <script src="apps.js"></script>
 </head>
 <body>
-    <div></div>
+    
 
 </body>
 </html>
